# g1_nav

./: CMakeLists.txt  FOR Zhang.md  README.md  costmap_plugins.xml  package.xml  record_g1_nav_repro_bag.sh  setup.cfg  setup.py  start_g1_auto_explore.sh  start_navigation_headless.sh
behavior_trees/: navigate_through_poses_w_g1_embedded_recovery.xml  navigate_to_pose_w_g1_embedded_recovery.xml  navigate_to_pose_w_g1_explore_fail_fast.xml
config/: amcl_params.yaml  collision_monitor_params.yaml  frontier_explorer_params.yaml  nav2_params.yaml  nav2_params_2d _chongqweii.yaml  nav2_params_2d.yaml  nav2_params_2d1.yaml  nav2_params_2d_zuiyuanshi.yaml  nav2_params_3d.yaml  nav2_params_relco.yaml  realsense_depth_to_scan.yaml  zhanting_batter.pgm  zhanting_batter.yaml
docs/report/: 2026-04-14-behind-goal-stutter-debug.md
docs/reports/: 2026-04-03-g1-navigation-methodology-report.md  2026-04-07-frontier-costmap-search-log.md  2026-04-11-recent-session-summary.md  2026-04-13-auto-slam-rosbag-recording-and-replay-report.md  2026-04-13-frontier-completion-regression-report.md  2026-04-13-frontier-nearest-goal-selection-report.md  2026-04-15-g1-navigation-executor-architecture-and-server-protocol-report.md  2026-04-16-exploration-pause-poi-handoff-and-brain-guided-frontier-report.md  2026-04-16-headless-navigation-cpu-profiling-report.md  2026-04-16-recent-4-day-weekly-report.md  2026-04-16-关闭-rviz-后的-cpu-profiling-对比报告.md  2026-04-20-g1-mobile-operator-console-design-and-implementation-report.md
docs/superpowers/plans/: 2026-03-27-probability-map-frontier-plan.md  2026-03-30-frontier-goal-snap-clearance-plan.md  2026-03-30-nav2-inflation-radius-tuning-plan.md  2026-04-06-frontier-debug-visualization-plan.md  2026-04-07-scan-priority-local-costmap-plan.md  2026-04-09-frontier-goal-lock-fallback-plan.md  2026-04-09-g1-nav-launch-layering-plan.md  2026-04-09-nav2-dynamic-obstacle-stop-replan-plan.md  2026-04-11-g1-embedded-obstacle-escape-plan.md  2026-04-13-g1-axis-escape-recovery-plan.md  2026-04-14-g1-auto-mapping-nav-migration-plan.md  2026-04-15-g1-navigation-executor-semantic-poi-plan.md
docs/superpowers/specs/: 2026-03-27-probability-map-frontier-design.md  2026-03-30-frontier-goal-snap-clearance-design.md  2026-03-30-nav2-inflation-radius-tuning-design.md  2026-04-06-frontier-debug-visualization-design.md  2026-04-07-scan-priority-local-costmap-design.md  2026-04-09-g1-nav-launch-layering-design.md  2026-04-09-nav2-dynamic-obstacle-stop-replan-design.md  2026-04-11-g1-embedded-obstacle-escape-design.md  2026-04-13-g1-axis-escape-recovery-design.md  2026-04-14-g1-auto-mapping-nav-migration-design.md  2026-04-15-g1-navigation-executor-semantic-poi-design.md
g1_nav/: frontier_explorer.py  map_cache_bridge.py  map_warmup_spin.py  monitor_nav2_frontier_cpu.py  nav2_action_bridge.py  nav2_precheck.py  navigation_executor.py  navigation_executor_core.py  navigation_goal_resolver.py  navigation_protocol.py  navigation_types.py  odometry_tf_broadcaster.py  poi_store.py  pose_provider.py  tf_to_odom.py
include/g1_nav/: escape_obstacle_action.hpp  exploration_types.hpp  frontier_blacklist_policy.hpp  frontier_completion_policy.hpp  frontier_goal_selector.hpp  frontier_navigation_result_policy.hpp  frontier_search.hpp  gvd_map.hpp  robot_embedded_in_obstacle_condition.hpp  scan_priority_geometry.hpp  scan_priority_layer.hpp
launch/: 2d_g1_nav2_bringup.launch.py  2d_g1_nav2_bringup.launch0.py  2d_g1_nav2_bringup0.launch.py  3d_g1_nav2_bringup.launch.py  3d_g1_nav2_bringup.launch0.py  3drelco_g1_nav2_bringup.launch.py  copy_2d_g1_nav2_bringup.launch.py  g1_auto_explore.launch.py  g1_nav2_bringup.launch.py  g1_nav2_bringup_2d_reloc.launch.py  pulish_map.launch.py  re_g1_nav2_bringup.launch.py  realsense_depth_to_scan.launch.py
operator_console/: deploy.sh  launch_manager.py  profiles.yaml  test_deploy.py  test_launch_manager.py
operator_console/systemd/: foxglove-bridge.service  launch-manager.service
operator_console/web/: foxglove-layout.json  index.html
plan/: realsense_depth_to_scan_principle.md  realsense_local_obstacle_nav2_integration_plan.md  realsense_scan_cpu_monitor.py  realsense_scan_cpu_monitor_latest.csv
rviz/: nav2_go2_view.rviz  nav2_projected_map.rviz
semantic/: semantic_markers.yaml
src/: escape_obstacle_action.cpp  frontier_explorer.cpp  frontier_goal_selector.cpp  frontier_search.cpp  gvd_map.cpp  robot_embedded_in_obstacle_condition.cpp  scan_priority_geometry.cpp  scan_priority_layer.cpp
test/: escape_obstacle_action_test.cpp  frontier_blacklist_policy_test.cpp  frontier_completion_policy_test.cpp  frontier_goal_selector_test.cpp  frontier_navigation_result_policy_test.cpp  frontier_search_test.cpp  scan_priority_geometry_test.cpp  test_headless_navigation_script.py  test_navigation_executor_packaging.py  test_navigation_executor_poi.py  test_navigation_executor_protocol.py  test_navigation_executor_runtime.py  test_odometry_tf_broadcaster.py  test_realsense_cpu_monitor.py  test_realsense_nav2_integration.py
