<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_nav</name>
  <version>0.0.0</version>
  <description>Navigation package for Unitree G1 robot</description>
  <maintainer email="luoyifan902008@126.com">FLYivan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>

  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>unitree_interfaces</depend>
  <depend>custom_interface</depend>
  <depend>go2_sport</depend>

  <exec_depend>nav2_rotation_shim_controller</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>sshpass</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
